доделал первую верстку
доделал первую верстку,это было нелегко))

--- a/index.html
+++ b/index.html
@@ -7,36 +7,39 @@
   </head>
 
   <body>
-    <header>
-      <a href="/"> <img src="/img/WebStudio.png" alt="Вебстудия" /></a>
+    <main>
+      <header>
+        <a href="/"> <img src="/img/WebStudio.png" alt="Вебстудия" /></a>
 
-      <nav>
+        <nav>
+          <ul>
+            <li><a href="">Студия</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
+          </ul>
+        </nav>
+
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
+      </header>
 
-      <ul>
-        <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="+38 096 111 11 11">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-
-    <div>
-      <section>
-        <h1>
-          Эффективные решения<br />
-          для вашего бизнеса
-        </h1>
-        <a href="Заказать услугу"> Заказать услугу</a>
-      </section>
-
+      <div>
+        <!--герой-->
+        <section>
+          <h1>
+            Эффективные решения<br />
+            для вашего бизнеса
+          </h1>
+          <a href=""> Заказать услугу</a>
+        </section>
+      </div>
       <section>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
+            <img src="./img/antenna1.svg" alt="антенна" width="65" />
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
@@ -45,6 +48,7 @@
 
           <li>
             <h3>Пунктуальность</h3>
+            <img src="./img/clock1.svg" alt="часы" width="67" />
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
@@ -53,6 +57,7 @@
 
           <li>
             <h3>Планирование</h3>
+            <img src="./img/diagram1.svg" alt="диаграмма" width="70" />
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
@@ -61,6 +66,7 @@
 
           <li>
             <h3>Современные технологии</h3>
+            <img src="./img/astronaut1.svg" alt="астронавт" width="64" />
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -68,54 +74,115 @@
           </li>
         </ul>
       </section>
-
+      <!--чем мы занимаемся-->
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./img/12.png" alt="Десктопные приложения" />
+            <img src="./img/12.png" alt="Десктопные приложения" width="370" />
             <p>Десктопные приложения</p>
           </li>
 
           <li>
-            <img src="./img/123.png" alt="Мобильные приложения" />
+            <img src="./img/123.png" alt="Мобильные приложения" width="370" />
             <p>Мобильные приложения</p>
           </li>
           <li>
-            <img src="./img/1234.png" alt="Дизайнерские решения" />
+            <img src="./img/1234.png" alt="Дизайнерские решения" width="370" />
             <p>Дизайнерские решения</p>
+          </li>
+        </ul>
+      </section>
+      <!--наша команда-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./img/николай.jpg" alt="николай" width="270" />
+            <h3>Николай Кучеренко</h3>
+            <p>Product Designer</p>
+            <a href="/"> <img src="/" alt="инстаграм" /></a>
+            <a href="/"> <img src="/" alt="твиттер" /></a>
+            <a href="/"> <img src="/" alt="фэйсбук" /></a>
+            <a href="/"> <img src="/" alt="ин" /></a>
+          </li>
+
+          <li>
+            <img src="./img/ольга.png" alt="ольга" width="270" />
+            <h3>Ольга Иванова</h3>
+            <p>Frontend Developer</p>
+            <a href="/"> <img src="/" alt="инстаграм" /></a>
+            <a href="/"> <img src="/" alt="твиттер" /></a>
+            <a href="/"> <img src="/" alt="фэйсбук" /></a>
+            <a href="/"> <img src="/" alt="ин" /></a>
+          </li>
+
+          <li>
+            <img src="./img/андрей.png" alt="андрей" width="270" />
+            <h3>Андрей Шевченко</h3>
+            <p>Marketing</p>
+            <a href="/"> <img src="/" alt="инстаграм" /></a>
+            <a href="/"> <img src="/" alt="твиттер" /></a>
+            <a href="/"> <img src="/" alt="фэйсбук" /></a>
+            <a href="/"> <img src="/" alt="ин" /></a>
+          </li>
+
+          <li>
+            <img src="./img/иван.png" alt="иван" width="270" />
+            <h3>Иван Николаев</h3>
+            <p>UI Designer</p>
+            <a href="/"> <img src="/" alt="инстаграм" /></a>
+            <a href="/"> <img src="/" alt="твиттер" /></a>
+            <a href="/"> <img src="/" alt="фэйсбук" /></a>
+            <a href="/"> <img src="/" alt="ин" /></a>
           </li>
         </ul>
       </section>
 
       <section>
-        <h2>Наша команда</h2>
+        <h1>Постоянные клиенты</h1>
         <ul>
-          <li>
-            <img src="./img/николай.jpg" alt="николай" />
-            <h3>Николай Кучеренко</h3>
-            <p>Product Designer</p>
-          </li>
-
-          <li>
-            <img src="./img/ольга.png" alt="ольга" />
-            <h3>Ольга Иванова</h3>
-            <p>Frontend Developer</p>
-          </li>
-
-          <li>
-            <img src="./img/андрей.png" alt="андрей" />
-            <h3>Андрей Шевченко</h3>
-            <p>Marketing</p>
-          </li>
-
-          <li>
-            <img src="./img/иван.png" alt="иван" />
-            <h3>Иван Николаев</h3>
-            <p>UI Designer</p>
-          </li>
+          <li><img src="./img/logo1.png" alt="лого1" /></li>
+          <li><img src="./img/logo2.png" alt="лого2" /></li>
+          <li><img src="./img/logo3.png" alt="лого3" /></li>
+          <li><img src="./img/logo4.png" alt="лого4" /></li>
+          <li><img src="./img/logo5.png" alt="лого5" /></li>
+          <li><img src="./img/logo6.png" alt="лого6" /></li>
         </ul>
       </section>
-    </div>
+      <!--футер-->
+      <footer>
+        <section>
+          <a href="/"> <img src="/img/WebStudio.png" alt="Вебстудия" /></a>
+          <ul>
+            <li><h3>г. Киев, пр-т Леси Украинки, 26</h3></li>
+            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Присоединяйтесь</h2>
+          <ul>
+            <li>
+              <a href="/"> <img src="/" alt="инстаграм" /></a>
+              <a href="/"> <img src="/" alt="твиттер" /></a>
+              <a href="/"> <img src="/" alt="фэйсбук" /></a>
+              <a href="/"> <img src="/" alt="ин" /></a>
+            </li>
+          </ul>
+
+          <ul>
+            <li>
+              <button>подписаться</button>
+              <textarea>
+                  E-mail  
+                </textarea
+              >
+            </li>
+          </ul>
+        </section>
+      </footer>
+    </main>
   </body>
 </html>
