--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
       <footer>
         <section>
           <a href="/"> <img src="/img/WebStudio.png" alt="Вебстудия" /></a>
+          <address>г. Киев, пр-т Леси Украинки, 26</address>
           <ul>
-            <li><h3>г. Киев, пр-т Леси Украинки, 26</h3></li>
             <li><a href="info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
