--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <main>
       <header>
-        <a href="/"> <img src="/img/WebStudio.png" alt="Вебстудия" /></a>
+        <a href="./index.html" aria-label="Логотип веб-студии">
+          <span lang="en"> WebStudio </span>
+        </a>
 
         <nav>
           <ul>
@@ -18,55 +20,48 @@
             <li><a href="">Контакты</a></li>
           </ul>
         </nav>
-
         <ul>
           <li><a href="info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </header>
 
-      <div>
-        <!--герой-->
-        <section>
-          <h1>
-            Эффективные решения<br />
-            для вашего бизнеса
-          </h1>
-          <a href=""> Заказать услугу</a>
-        </section>
-      </div>
+      <!--герой-->
+      <section>
+        <h1>
+          Эффективные решения<br />
+          для вашего бизнеса
+        </h1>
+        <button>Заказать услугу</button>
+      </section>
+
       <section>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
-            <img src="./img/antenna1.svg" alt="антенна" width="65" />
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-
           <li>
             <h3>Пунктуальность</h3>
-            <img src="./img/clock1.svg" alt="часы" width="67" />
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-
           <li>
             <h3>Планирование</h3>
-            <img src="./img/diagram1.svg" alt="диаграмма" width="70" />
+
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-
           <li>
             <h3>Современные технологии</h3>
-            <img src="./img/astronaut1.svg" alt="астронавт" width="64" />
+
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -79,109 +74,76 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./img/12.png" alt="Десктопные приложения" width="370" />
-            <p>Десктопные приложения</p>
+            <img
+              src="./img/img0002.jpg"
+              alt="Десктопные приложения"
+              width="370"
+            />
           </li>
 
           <li>
-            <img src="./img/123.png" alt="Мобильные приложения" width="370" />
-            <p>Мобильные приложения</p>
+            <img
+              src="./img/img002.jpg"
+              alt="Мобильные приложения"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./img/1234.png" alt="Дизайнерские решения" width="370" />
-            <p>Дизайнерские решения</p>
+            <img
+              src="./img/img003.jpg"
+              alt="Дизайнерские решения"
+              width="370"
+            />
           </li>
         </ul>
       </section>
       <!--наша команда-->
       <section>
         <h2>Наша команда</h2>
+
         <ul>
           <li>
-            <img src="./img/николай.jpg" alt="николай" width="270" />
-            <h3>Николай Кучеренко</h3>
+            <img src="./img/igor.jpg" alt="igor" width="270" />
+            <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
-            <a href="/"> <img src="/" alt="инстаграм" /></a>
-            <a href="/"> <img src="/" alt="твиттер" /></a>
-            <a href="/"> <img src="/" alt="фэйсбук" /></a>
-            <a href="/"> <img src="/" alt="ин" /></a>
-          </li>
-
-          <li>
-            <img src="./img/ольга.png" alt="ольга" width="270" />
-            <h3>Ольга Иванова</h3>
-            <p>Frontend Developer</p>
-            <a href="/"> <img src="/" alt="инстаграм" /></a>
-            <a href="/"> <img src="/" alt="твиттер" /></a>
-            <a href="/"> <img src="/" alt="фэйсбук" /></a>
-            <a href="/"> <img src="/" alt="ин" /></a>
-          </li>
-
-          <li>
-            <img src="./img/андрей.png" alt="андрей" width="270" />
-            <h3>Андрей Шевченко</h3>
-            <p>Marketing</p>
-            <a href="/"> <img src="/" alt="инстаграм" /></a>
-            <a href="/"> <img src="/" alt="твиттер" /></a>
-            <a href="/"> <img src="/" alt="фэйсбук" /></a>
-            <a href="/"> <img src="/" alt="ин" /></a>
-          </li>
-
-          <li>
-            <img src="./img/иван.png" alt="иван" width="270" />
-            <h3>Иван Николаев</h3>
-            <p>UI Designer</p>
-            <a href="/"> <img src="/" alt="инстаграм" /></a>
-            <a href="/"> <img src="/" alt="твиттер" /></a>
-            <a href="/"> <img src="/" alt="фэйсбук" /></a>
-            <a href="/"> <img src="/" alt="ин" /></a>
           </li>
         </ul>
-      </section>
 
-      <section>
-        <h1>Постоянные клиенты</h1>
         <ul>
-          <li><img src="./img/logo1.png" alt="лого1" /></li>
-          <li><img src="./img/logo2.png" alt="лого2" /></li>
-          <li><img src="./img/logo3.png" alt="лого3" /></li>
-          <li><img src="./img/logo4.png" alt="лого4" /></li>
-          <li><img src="./img/logo5.png" alt="лого5" /></li>
-          <li><img src="./img/logo6.png" alt="лого6" /></li>
+          <li>
+            <img src="./img/olga.png" alt="olga" width="270" />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <img src="./img/nikola.png" alt="nikola" width="270" />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <img src="./img/mixail.png" alt="mixail" width="270" />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
+
       <!--футер-->
       <footer>
-        <section>
-          <a href="/"> <img src="/img/WebStudio.png" alt="Вебстудия" /></a>
-          <address>г. Киев, пр-т Леси Украинки, 26</address>
+        <a href="/"> <img src="/img/WebStudio.png" alt="Вебстудия" /></a>
+        <address>
+          г. Киев, пр-т Леси Украинки, 26
           <ul>
             <li><a href="info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
-        </section>
-
-        <section>
-          <h2>Присоединяйтесь</h2>
-          <ul>
-            <li>
-              <a href="/"> <img src="/" alt="инстаграм" /></a>
-              <a href="/"> <img src="/" alt="твиттер" /></a>
-              <a href="/"> <img src="/" alt="фэйсбук" /></a>
-              <a href="/"> <img src="/" alt="ин" /></a>
-            </li>
-          </ul>
-
-          <ul>
-            <li>
-              <button>подписаться</button>
-              <textarea>
-                  E-mail  
-                </textarea
-              >
-            </li>
-          </ul>
-        </section>
+        </address>
       </footer>
     </main>
   </body>
