надеюсь последние изменения

--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
 
       <!--футер-->
       <footer>
-        <a href="/"> <img src="/img/WebStudio.png" alt="Вебстудия" /></a>
+        <a href="./index.html" aria-label="Логотип веб-студии">
+          <span lang="en"> WebStudio </span>
+        </a>
         <address>
           г. Киев, пр-т Леси Украинки, 26
           <ul>
